# r53-ddns

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  WORKFLOW.md  __init__.py  ddns.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  docker-publish.yml  publish.yml  pylint.yml  test.yml  version-check.yml
tests/: __init__.py  test_ddns.py
